# rust-for-reactive-services

./: README.md
reactive_service/: Cargo.toml
reactive_service-single-thread/: Cargo.toml
reactive_service-single-thread/src/: main.rs
reactive_service/src/: main.rs  order_service.rs  payment_processor.rs  tax_calculator.rs
reactive_service/src/infra/: postgres_events_store.rs
reactive_service_async/: Cargo.toml
reactive_service_async/src/: order_service.rs
reactive_service_async/src/infra/: mod.rs  postgres_events_store.rs  scylla_event_store.rs
reactive_service_async/tests/: async_bench.rs  single_thread.rs
reactive_service_domain/: Cargo.toml  README.md
reactive_service_domain/src/: aggregate_root.rs  canada_postal_code.rs  lib.rs  non_empty_cart.rs  order_entity.rs  order_state.rs  payment_processor.rs  postal_code.rs  shipping_calculator.rs  tax_calculator.rs
reactive_service_multi_threads/: Cargo.toml
reactive_service_multi_threads/src/: order_service.rs  shipping_calculator.rs  tax_calculator.rs
reactive_service_multi_threads/src/infra/: mod.rs  postgres_events_store.rs
reactive_service_multi_threads/tests/: multi_thread.rs
reactive_service_single_thread/: Cargo.toml
reactive_service_single_thread/src/: lib.rs  order_service.rs  payment_processor.rs
reactive_service_single_thread/src/infra/: inmem_journal.rs  mod.rs  postgres_events_store.rs
reactive_service_single_thread/tests/: performance.rs  single_thread.rs
slides-support/: Cargo.toml
slides-support/src/: canada_postal_code.rs  canada_postal_code_nutype.rs  factory.rs  http_request.rs  main.rs  payment.rs  traffic_light.rs
