[package]
name = "reactive_service"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
reactive_service_domain = { path = "../reactive_service_domain" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
postgres = "*"

[profile.release]
lto = "fat"
debug = true

