[package]
name = "reactive_service_domain"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.1"

[lib]
name = "reactive_service_domain"
path = "src/lib.rs"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
regex = "*"
heapless = { version = "*", features = ["serde"] }
lazy_static = "*"

[profile.release]
lto = "fat"
debug = true

