[package]
name = "reactive_service_multi_threads"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "reactive_service_multi_threads"
path = "src/lib.rs"

[dependencies]
reactive_service_domain = { path = "../reactive_service_domain" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
postgres = "*"
rayon = "1.10.0"
r2d2_postgres = "0.18.1"
r2d2 = "0.8.10"
rand = "0.8.5"

[profile.release]
lto = "fat"
debug = true
codegen-units = 1

